--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,19 @@
+buildscript {
+    ext {
+        appcompat_version = "1.2.0"
+        constraintlayout_version = "2.0.2"
+        core_ktx_version = "1.3.2"
+        kotlin_version = "1.3.72"
+        material_version = "1.2.1"
+        nav_version = "2.3.1"
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+    }
+}
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.1.0' apply false
@@ -8,3 +24,4 @@ plugins {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
